galley/pkg/config/analysis/analyzers/testdata/virtualservice_host_not_defined_gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - foo.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-service
  namespace: default
spec:
  gateways:
  - istio-system/gw
  hosts:
  - foo.com # Expected: no validation error since this host exists
  http:
  - match:
    - uri:
        prefix: /
  - route:
    - destination:
        host: ratings
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-fake-service
  namespace: default
spec:
  gateways:
  - istio-system/gw
  hosts:
  - bar.com # Expected: validation error since this host does not exist
  http:
  - match:
    - uri:
        prefix: /
  - route:
    - destination:
        host: ratings
